feat: improve debug logging and step generation
- Renamed DEBUG_STEPS to STEP_DEBUG and made it configurable via command line argument
- Added conditional debug logging throughout codebase to only show messages when STEP_DEBUG is enabled
- Updated step generation parameters for each difficulty level to create better balanced charts
- Added proper resource cleanup with try-with-resources for file streams and readers
- Fixed URL encoding issues in image downloads by using URI.create()
- Added debug